--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
             <artifactId>hibernate-core</artifactId>
             <version>6.2.2.Final</version>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+        </dependency>
     </dependencies>
 	
 
