--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # JPA CONFIGURATIONS
-spring.jpa.show-sql: true
+spring.jpa.show-sql: false
 spring.jpa.open-in-view=false
 
 # DATABASE MYSQL CONECTION
