Adicao de JWT a autorizacao, porem nao esta funcionando, tambem foi consertado login por usuario senha que antreriormente nao funcionada

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.username=root
 spring.datasource.password=09121996jean
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+api.security.token.secret=${JWT_SECRET:my-secret-key}
